搜索-搜索布局和数据渲染
搜索-搜索布局和数据渲染

--- a/project.config.json
+++ b/project.config.json
@@ -50,6 +50,13 @@
 					"id": -1,
 					"name": "分类页",
 					"pathName": "pages/tabs/cates",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "搜索页",
+					"pathName": "pages/tabs/search",
 					"scene": null
 				}
 			]
