--- a/project.config.json
+++ b/project.config.json
@@ -57,6 +57,14 @@
 					"id": -1,
 					"name": "搜索页",
 					"pathName": "pages/tabs/search",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": 2,
+					"name": "商品列表",
+					"pathName": "pages/goods_list/index",
+					"query": "query=拖鞋",
 					"scene": null
 				}
 			]
