--- a/project.config.json
+++ b/project.config.json
@@ -64,7 +64,7 @@
 					"id": 2,
 					"name": "商品列表",
 					"pathName": "pages/goods_list/index",
-					"query": "query=拖鞋",
+					"query": "query=毛绒",
 					"scene": null
 				}
 			]
