--- a/project.config.json
+++ b/project.config.json
@@ -66,6 +66,13 @@
 					"pathName": "pages/goods_list/index",
 					"query": "query=毛绒",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "商品详情页",
+					"pathName": "pages/goods_detail/index",
+					"query": "goods_id=55959",
+					"scene": null
 				}
 			]
 		}
