--- a/project.config.json
+++ b/project.config.json
@@ -73,6 +73,12 @@
 					"pathName": "pages/goods_detail/index",
 					"query": "goods_id= 57440",
 					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "购物车页面",
+					"pathName": "pages/tabs/cart",
+					"scene": null
 				}
 			]
 		}
