--- a/project.config.json
+++ b/project.config.json
@@ -78,6 +78,13 @@
 					"id": -1,
 					"name": "购物车页面",
 					"pathName": "pages/tabs/cart",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "提交订单",
+					"pathName": "pages/order/index",
 					"scene": null
 				}
 			]
